# mcp-alchemy

./: Makefile  README.md  VERSION.txt  pyproject.toml
mcp_alchemy/: server.py
tests/: test.py  test_report.md
