[project]
name = "mcp-alchemy"
version = "2025.7.9.172934"
description = "A MCP server that connects to your database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0rc1",
    "sqlalchemy>=2.0.36",
]
authors = [
  { name="Rune Kaagaard" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
packages = [
    {include = "mcp_alchemy"}
]

[project.scripts]
mcp-alchemy = "mcp_alchemy.server:main"

[project.urls]
Homepage = "https://github.com/runekaagaard/mcp-alchemy"
Issues = "https://github.com/runekaagaard/mcp-alchemy/issues"
Disussions = "https://github.com/runekaagaard/mcp-alchemy/discussions"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
]
